--- a/src/qt/forms/ChatWindow.ui
+++ b/src/qt/forms/ChatWindow.ui
@@ -1467,7 +1467,7 @@ color: #4C4C4C;</string>
                 <property name="bottomMargin">
                  <number>6</number>
                 </property>
-                <item row="3" column="0">
+                <item row="4" column="0">
                  <widget class="QFrame" name="gridFrame">
                   <property name="styleSheet">
                    <string notr="true">background-color: rgb(255,255,255);
@@ -1476,17 +1476,12 @@ color: #4C4C4C;</string>
                   </property>
                   <layout class="QGridLayout" name="gridLayout_14">
                    <item row="0" column="0">
-                    <widget class="QListWidget" name="listWidget">
-                     <property name="styleSheet">
-                      <string notr="true">border:none;
-background-color:none;</string>
-                     </property>
-                    </widget>
+                    <widget class="QTableView" name="transferAddressTable"/>
                    </item>
                   </layout>
                  </widget>
                 </item>
-                <item row="6" column="0">
+                <item row="7" column="0">
                  <layout class="QHBoxLayout" name="horizontalLayout_22">
                   <item>
                    <widget class="QPushButton" name="submitTransferUsername">
@@ -1526,7 +1521,19 @@ padding: 4px 12px;</string>
                  </layout>
                 </item>
                 <item row="1" column="0">
-                 <widget class="QLineEdit" name="lineEdit">
+                 <widget class="QLineEdit" name="transferUsernameLine">
+                  <property name="styleSheet">
+                   <string notr="true">background-color: rgb(255,255,255);
+border-radius:3px;
+border: 1px solid #C4C1BD;
+color: #4C4C4C;
+padding: 4px;
+color: #4C4C4C;</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="6" column="0">
+                 <widget class="QLineEdit" name="transferEmail">
                   <property name="styleSheet">
                    <string notr="true">background-color: rgb(255,255,255);
 border-radius:3px;
@@ -1551,22 +1558,10 @@ color: #4C4C4C;</string>
                   </property>
                  </widget>
                 </item>
-                <item row="4" column="0">
+                <item row="5" column="0">
                  <widget class="QLabel" name="label_12">
                   <property name="text">
                    <string>Email address (optional):</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="5" column="0">
-                 <widget class="QLineEdit" name="transferEmail">
-                  <property name="styleSheet">
-                   <string notr="true">background-color: rgb(255,255,255);
-border-radius:3px;
-border: 1px solid #C4C1BD;
-color: #4C4C4C;
-padding: 4px;
-color: #4C4C4C;</string>
                   </property>
                  </widget>
                 </item>
