--- a/src/qt/forms/ChatWindow.ui
+++ b/src/qt/forms/ChatWindow.ui
@@ -73,7 +73,7 @@ border-radius: 25px;
           <string notr="true">background-image:url(:/images/res/images/nav-bg.jpg)</string>
          </property>
          <property name="currentIndex">
-          <number>4</number>
+          <number>3</number>
          </property>
          <widget class="QWidget" name="chatPage">
           <layout class="QGridLayout" name="gridLayout">
@@ -837,6 +837,9 @@ padding: 4px 12px;</string>
                     </item>
                     <item>
                      <widget class="QLabel" name="registerError">
+                      <property name="styleSheet">
+                       <string notr="true">color:#BF3A2B</string>
+                      </property>
                       <property name="text">
                        <string/>
                       </property>
@@ -1034,6 +1037,9 @@ padding: 4px 12px;</string>
                   </item>
                   <item>
                    <widget class="QLabel" name="recoveryUsernameMessage">
+                    <property name="styleSheet">
+                     <string notr="true">color:#BF3A2B</string>
+                    </property>
                     <property name="text">
                      <string/>
                     </property>
@@ -1291,6 +1297,9 @@ padding: 4px 12px;</string>
                   </item>
                   <item>
                    <widget class="QLabel" name="recoveryTokenMessage">
+                    <property name="styleSheet">
+                     <string notr="true">color:#BF3A2B</string>
+                    </property>
                     <property name="text">
                      <string/>
                     </property>
@@ -1500,6 +1509,9 @@ padding: 4px 12px;</string>
                   </item>
                   <item>
                    <widget class="QLabel" name="submitTransferUsernameMessage">
+                    <property name="styleSheet">
+                     <string notr="true">color:#BF3A2B</string>
+                    </property>
                     <property name="text">
                      <string/>
                     </property>
